# NirvanaRenderer

./: CMakeLists.txt  api.h  main.cpp
Core/: camera.h  color.h  data_struct.h  input.h  macro.h  mat.h  mathf.h  maths.h  model.h  object.h  renderer.h  transform.h  vec.h
Core/Asset/: asset_inc.h  loader.h  obj_loader.h
Core/Component/: com_inc.h  component.h  transform.h
Platform/: win.h
